AppBar button fix; Android 2.3.3 fix
The buttons color in the AppBar was the same as the background
thus making the buttons invisible to the user.

This occoured only in the Android 2.3.3 platforms.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,7 +34,7 @@ $active-color: #C35817;
 	.app_bar_button {
 		color: $base-color*0.5;
 		border: 2px solid $base-color*0.5;
-		background-color: $base-color*0.5;
+		background-color: white;
 		opacity: 1 !important;
 		font-size: 27px;
 	}
